# comock

./: .gitignore  LICENSE  README.md
.github/workflows/: cmake-multi-platform.yml
docs/: _config.yml  index.md  quick_start.md
src/: CMakeLists.txt
src/boost/preprocessor/iteration/: iterate.hpp  local.hpp  self.hpp
src/boost/preprocessor/slot/: slot.hpp
src/comock/: comock.h
src/comock_test/: test_class.cpp  test_interface.cpp  test_main.cpp
src/doctest/: doctest.h
